# clipboard_multiline_fixer

./: Cargo.toml  README.md
src/: fixer.rs  main.rs
